third_party/move/move-compiler-v2/tests/checking/typing/assign_unpack_references_invalid.exp

Diagnostics:
error: cannot assign `integer` to left-hand side of type `&u64`
  ┌─ tests/checking/typing/assign_unpack_references_invalid.move:9:9
  │
9 │         f = 0;
  │         ^

error: cannot assign `S` to left-hand side of type `&S`
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:10:9
   │
10 │         s2 = S { f: 0 }
   │         ^^

error: cannot assign `integer` to left-hand side of type `&mut u64`
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:17:9
   │
17 │         f = 0;
   │         ^

error: cannot assign `S` to left-hand side of type `&mut S`
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:18:9
   │
18 │         s2 = S { f: 0 }
   │         ^^

error: cannot assign `&u64` to left-hand side of type `&mut u64` (mutability mismatch)
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:26:9
   │
26 │         f = &0;
   │         ^

error: cannot assign `&S` to left-hand side of type `&mut S` (mutability mismatch)
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:27:9
   │
27 │         s2 = &S { f: 0 }
   │         ^^
